# falcon-rate-limiter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  PUBLICATION_READINESS.md  README.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml
blog/: 01-introducing-falcon-rate-limiter.md  02-building-resilient-apis.md  03-falcon-rate-limiter-vs-slowapi.md
examples/: quick_start.py
falcon_rate_limiter/: __init__.py  _helpers.py  _storage.py  constants.py  core.py  middleware.py  utils.py
limiter/: __init__.py  _config.py  _helpers.py  _storage.py  constants.py  core.py  middleware.py  utils.py
scripts/: release.py
tests/: conftest.py  test_app.py  test_conditional_exemptions.py  test_configuration.py  test_core_internal.py  test_cost.py  test_decorator_limits.py  test_limiter.py  test_method_filters.py  test_middleware.py  test_per_method.py  test_rate_limit_headers.py  test_shared_limits.py  test_storage.py  test_storage_integration.py  test_strategy_selection.py
tests/e2e/: conftest.py  docker-compose.yml  test_e2e.py
tests/e2e/app/: Dockerfile  app.py
