[project]
name = "falcon-rate-limiter"
version = "0.1.0"
description = "A simple rate limiter for Falcon using limits library"
requires-python = ">=3.14"
dependencies = [
    "falcon>=4.0.0",
    "gunicorn>=21.0.0",
    "limits>=3.0.0",
    "pytest>=9.0.2",
    "python-dateutil>=2.9.0.post0",
    "redis>=4.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["limiter"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
    "types-python-dateutil>=2.9.0.20260305",
    "types-redis>=4.6.0.20241004",
]

[tool.pytest.ini_options]
addopts = "--ignore=tests/e2e"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
