[project]
name = "falcon-rate-limiter"
version = "0.1.0"
description = "Rate limiting for Falcon applications powered by limits."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "w7089" },
]
maintainers = [
    { name = "w7089" },
]
requires-python = ">=3.10"
keywords = ["falcon", "rate-limiting", "limits", "asgi", "wsgi", "redis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "falcon>=4.0.0",
    "limits>=3.0.0",
    "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
redis = [
    "redis>=7.4.0",
]

[project.urls]
Homepage = "https://github.com/w7089/falcon-rate-limiter"
Repository = "https://github.com/w7089/falcon-rate-limiter"
Issues = "https://github.com/w7089/falcon-rate-limiter/issues"
Changelog = "https://github.com/w7089/falcon-rate-limiter/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["falcon_rate_limiter"]

[tool.setuptools.package-data]
falcon_rate_limiter = ["py.typed"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "redis>=7.4.0",
    "ruff>=0.15.16",
    "types-python-dateutil>=2.9.0.20260518",
    "types-redis>=4.6.0.20241004",
]
e2e = [
    "gunicorn>=26.0.0",
]

[tool.pytest.ini_options]
addopts = "--ignore=tests/e2e"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests"]
